leptos_macro/tests/ui/component.stderr
error: return type is incorrect
 --> tests/ui/component.rs:4:1
  |
4 | fn missing_scope() {}
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: return signature must be `-> impl IntoView`

error: return type is incorrect
 --> tests/ui/component.rs:7:1
  |
7 | fn missing_return_type() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: return signature must be `-> impl IntoView`

error: supported fields are `optional`, `optional_no_strip`, `strip_option`, `default`, `into` and `attrs`
  --> tests/ui/component.rs:10:31
   |
10 | fn unknown_prop_option(#[prop(hello)] test: bool) -> impl IntoView {
   |                               ^^^^^

error: `optional` conflicts with mutually exclusive `optional_no_strip`
  --> tests/ui/component.rs:16:12
   |
16 |     #[prop(optional, optional_no_strip)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `optional` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component.rs:23:12
   |
23 |     #[prop(optional, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: `optional_no_strip` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component.rs:30:12
   |
30 |     #[prop(optional_no_strip, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected `=` or `(`

       = help: try `#[prop(default = 5 * 10)]`
  --> tests/ui/component.rs:36:40
   |
36 | fn default_without_value(#[prop(default)] default: bool) -> impl IntoView {
   |                                        ^

error: unexpected end of input, expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`

       = help: try `#[prop(default = 5 * 10)]`
  --> tests/ui/component.rs:42:22
   |
42 |     #[prop(default= |)] default: bool,
   |                      ^
